--- a/css/style.css
+++ b/css/style.css
@@ -678,25 +678,11 @@ h4 {
   justify-content: center;
 }
 
-.fullbleed2 {
+#fullbleed2 {
   background-image: linear-gradient(16deg, #5BA6CB 0%, #88D8B7 100%);
-  padding: 100px 0;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: center;
 }
 
 .fullbleed img {
-  max-height: none;
-  margin: 0 20px;
-  box-shadow: 0 10px 20px 0 rgba(5, 15, 35, 0.3);
-  width: 100%;
-  max-width: 800px;
-  border-radius: 5px;
-}
-
-.fullbleed2 img {
   max-height: none;
   margin: 0 20px;
   box-shadow: 0 10px 20px 0 rgba(5, 15, 35, 0.3);
